[gd_scene load_steps=12 format=3 uid="uid://dynoildyhlobg"]

[ext_resource type="Script" path="res://Scripts/welcome_screen.gd" id="1_rtf0e"]
[ext_resource type="Script" path="res://Scripts/MarginContainer_image.gd" id="2_mf2y4"]
[ext_resource type="Texture2D" uid="uid://diqdp30wf1g87" path="res://media/title_screen.png" id="3_vspl4"]
[ext_resource type="Script" path="res://Scripts/MarginContainer_play.gd" id="4_ef8l8"]
[ext_resource type="Texture2D" uid="uid://7oyd6ers3o0" path="res://media/play_button.png" id="5_45niy"]
[ext_resource type="Texture2D" uid="uid://b4t6xkyji00hf" path="res://media/play_button_pressed.png" id="6_yhlbm"]
[ext_resource type="Texture2D" uid="uid://dy25vn8h3mbjt" path="res://media/play_button_hovered.png" id="7_c1ne2"]

[sub_resource type="Animation" id="Animation_nkpnm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/anim_rectangle:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_l4xst"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/anim_rectangle:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.7, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_npi40"]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/anim_rectangle:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8me2"]
_data = {
"RESET": SubResource("Animation_nkpnm"),
"fade_in": SubResource("Animation_l4xst"),
"fade_out": SubResource("Animation_npi40")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rtf0e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215686, 0.0705882, 0.0313726, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
script = ExtResource("2_mf2y4")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("3_vspl4")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(10, 20)
layout_mode = 2
script = ExtResource("4_ef8l8")

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Control/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("5_45niy")
texture_pressed = ExtResource("6_yhlbm")
texture_hover = ExtResource("7_c1ne2")

[node name="anim_rectangle" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = -578.0
offset_top = -522.0
offset_right = 1966.0
offset_bottom = 1196.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CreditsLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -232.0
offset_top = -153.0
grow_horizontal = 0
grow_vertical = 0
text = "Made by:
        Loumon
        Telo
        Elmrys
        Pierina
        Mathilde

"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o8me2")
}

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/MarginContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
